# fewshot_instruction-PyTorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/data/HellaSwag/: dataset.py  prompt.py  validation.py
src/data/MNLI/: dataset.py  prompt.py  validation.py
src/data/PIQA/: dataset.py  prompt.py  validation.py
src/data/RTE/: ablation1.py  dataset.py  prompt.py  validation.py
src/models/: load_model.py  model.py  model_test.py
