[project]
name = "few-shot-instruction-reproduction"
version = "0.1.0"
description = "Reproduction framework for Brown et al. 2020 few-shot prompting and Wei et al. 2022 instruction tuning."
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.30.0",
  "bitsandbytes>=0.43.0; platform_system != 'Darwin'",
  "datasets>=2.19.0",
  "evaluate>=0.4.2",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "openai>=1.30.0",
  "pandas>=2.2.0",
  "peft>=0.11.0",
  "pyyaml>=6.0.1",
  "sacrebleu>=2.4.0",
  "scikit-learn>=1.4.0",
  "seaborn>=0.13.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
  "transformers>=4.41.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100

